styles.css
@font-face {
  font-family: 'Phantom Sans';
  src:
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
      format('woff'),
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2')
      format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Phantom Sans';
  src:
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff')
      format('woff'),
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff2')
      format('woff2');
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: 'Phantom Sans';
  src:
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff')
      format('woff'),
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff2')
      format('woff2');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

html {
    width: 100%;
}

body {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    font-family: 'Phantom Sans', sans-serif;
    font-size: 16px;
    width: 100%;
}

.youmortalscantcontainme {
    display: flex;
    justify-content: center;
    width: 100vw;
}

.panel {
    margin-top: 20vh;
    margin-left: 7rem;
}

.logo {
    height: auto;
    width: 37rem;
}

.dimg {
    margin-left: 3rem;
    margin-top: 15vh;
    height: 30rem;
    width: 35rem;
}

.tagline {
    font-size: 2rem;
    text-align: left;
    margin-right: 3rem;
}

button {
    font-family: 'Phantom Sans', sans-serif;
    border-radius: 3.40282e38px;
    padding: 1.25rem;
    font-size: 1.25rem;
    transition: background-color linear 0.1s;
    cursor: default;
}

button:hover {
    cursor: pointer;
}

.button {
    border-radius: 3.40282e38px;
    padding: 1.25rem;
    text-decoration: none;
    font-size: 1.25rem;
}

.button:hover {
    cursor: pointer;
}

.filled {
    border: none;
    background-color: black;
    color: white;
    font-weight: 600;
    transition: background-color linear 0.1s;
}

.filled:hover {
    background-color: #282828;
}

.input {
    border-radius: 3.40282e38px;
    padding: 1.25rem;
    text-decoration: none;
    font-size: 1.25rem;
    font-family: 'Phantom Sans', sans-serif;
}

.dotted {
    border: dotted 0.25rem;
    border-color: black;
}

input.dotted:focus {
    outline: none;
    border: solid 0.25rem;
}

.bdotted {
    background-color: white;
    outline: none;
    border: solid 0.25rem;
}

.bdotted:hover {
    border: dotted 0.25rem;
    border-color: black;
}

.sectionhead {
    color: black;
    font-size: 4rem;
}

.centertext {
    width: 40vw;
    text-align: left;
    padding: 2rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.mt {
    margin-top: 15rem;
}

.ysws {
    font-size: 1.13rem;
}

p {
    font-size: 1.2rem;
    line-height: 1.77778;
}

.smallhead {
    margin-top: 3rem;
    font-size: 1.3rem;
    letter-spacing: 0.7px;
}

.smallheadnm {
    font-size: 1.3rem;
    letter-spacing: 0.7px;
}

#about {
    color: #282828;
}

.faq {
    color: #282828;
}

.boxes {
    display: flex;
}

.famex {
    border-radius: 1rem;
    background-color: white;
    padding: 1rem;
    width: 30%;
    margin-right: 1rem;
}

.faqbox {
    border-radius: 1rem;
    background-color: white;
    padding: 1rem;
    width: 43.305%;
    margin-right: 1rem;
    margin-bottom: 1rem;
}

.faqwidebox {
    border-radius: 1rem;
    background-color: white;
    padding: 1rem;
    width: 95%;
    margin-right: 1rem;
}

.eximg {
    height: auto;
    width: 10vw;
}

.cheesecenter {
    text-align: center;
}

a {
    color: black;
    text-decoration: underline;
    transition: color 0.1s linear;
    cursor: default;
}

a:hover {
    color: #282828;
    text-decoration: underline dotted;
    cursor: pointer;
}

footer {
    margin-top: 3rem;
    background-color: whitesmoke;
    padding: 0.5rem;
    text-align: center;
}

header {
    display: flex;
    justify-content: right;
    position: sticky;
    top: 0;
    padding-top: 3rem;
    margin-right: 3rem;
}

header button {
    margin-right: 0.5rem;
}

header button:last-child {
    margin-right: 0;
}

.hc-logo {
    transform: rotate(0deg) translateY(-0.5rem);
    transition: transform 0.3s ease-in-out;
}

.hc-logo:hover {
    transform: rotate(10deg) translateY(0.5rem);
}

.nav {
    font-weight: bold;
    padding: 1rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    display: flex;
    align-items: center;
}

/* the following is supposed to kick in for mobile */
@media only screen and (max-width: 767px) {
    header {
        display: none !important;
    }

    .youmortalscantcontainme {
        display: block;
    }

    .logo {
        width: auto;
        height: 10vh;
    }

    .display {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .dimg {
        height: 40vh;
        width: 45vh;
        margin-top: 15vh;
        margin-left: 0;
    }

    .panel {
        text-align: center;
        margin-left: 0;
        margin-top: 10vh;
    }

    .tagline {
        font-size: 3vw;
        margin-left: auto;
        margin-right: auto;
        text-align: center;
    }

    #landing {
        height: 75vh;
    }

    .centertext {
        width: 100%;
        text-align: left;
        padding: 2rem;
        display: block;
        margin-left: auto;
        margin-right: auto;
        box-sizing: border-box;
    }

    .faqbox p, .faqwidebox p {
        font-size: 2vh;
    }

    .famex p {
        font-size: 1.6vh;
    }

    form {
        margin-top: 3vh;
    }

    .famex, .faqbox, .faqwidebox {
        margin-right: 0;
    }

    .boxes {
        gap: 1vw;
    }

    .duo {
        display: contents;
    }
}

/* kicks in for desktop */
@media screen and (min-width: 768px) {
    .centertext, footer {
        min-width: 45rem;
    }
}

